--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node test",
-    "prestart": "node build"
+    "prestart": "node build &"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,10 @@
   "dependencies": {
     "babelify": "^6.1.2",
     "browserify": "^10.2.1",
+    "chokidar": "^1.0.1",
     "cyclejs": "^0.22.0",
+    "jade": "^1.10.0",
+    "node-static": "^0.7.6",
     "shelljs": "^0.5.0",
     "webpack": "^1.9.10"
   }
